added: repository/service layers; DB init

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,5 +12,4 @@ spring:
   jpa:
     spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
     hibernate.ddl-auto: create-drop
-  graphql:
-    path: /graphql
+    show-sql: true
